paging refactoring
